Fix archive date in lots of posts, add license.

--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ pluralizelisttitles: false
 paginate: 10
 
 taxonomies:
-  archive: archive
+  archive: Archive
 
 params:
   description: "The personal blog of Joe Beda"
