Fix nginx.conf typo

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-  listen 80
-  server_name new.eightypercent.net
+  listen 80;
+  server_name new.eightypercent.net;
 
   location / {
     root   /sites/workdir/eightypercent/master/public;
