Set up default server and 301 redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,11 @@
 server {
+  listen 80 default_server;
+  server_name new.eightypercent.com;
+
+  return 301 $scheme://new.eightypercent.net:81$request_uri;
+}
+
+server {
   listen 80;
   server_name new.eightypercent.net;
 
