Fix nginx config typo, remove about page

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,11 @@ server {
   listen 80;
   server_name new.eightypercent.net;
 
+  root   /sites/workdir/eightypercent/master/public;
+
   location / {
-    root   /sites/workdir/eightypercent/master/public;
-    index  index.html
-    try_files $uri $uri.html =404;
+    index  index.html;
+    try_files $uri $uri.html /index.html;
   }
 
   error_page  404  /404.html;
