--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
 
   location / {
     index  index.html;
-    try_files $uri $uri.html =404;
+    try_files $uri $uri/ $uri.html =404;
   }
 
   error_page  404  /404.html;
