--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,13 @@ server {
   location / {
     index  index.html;
     try_files $uri $uri/ $uri.html =404;
+
+    # When hosting nginx behind NAT, the automatic trailing slash redirects will
+    # drop the port. This is the best way I've found to fix that.
+    # See: https://stackoverflow.com/questions/15555428/nginx-causes-301-redirect-if-theres-no-trailing-slash/23859008#23859008
+    if (-d $request_filename) {
+        rewrite [^/]$ $scheme://$http_host$uri/ redirect;
+    }
   }
 
   error_page  404  /404.html;
