Move to port 80

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   server_name new.eightypercent.com;
 
-  return 301 $scheme://new.eightypercent.net:81$request_uri;
+  return 301 $scheme://new.eightypercent.net$request_uri;
 }
 
 server {
