--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,13 @@
 server {
   listen 80 default_server;
-  server_name new.eightypercent.com;
+  server_name eightypercent.net eightypercent.com www.eightypercent.com;
 
-  return 301 $scheme://new.eightypercent.net$request_uri;
+  return 301 $scheme://www.eightypercent.net$request_uri;
 }
 
 server {
   listen 80;
-  server_name new.eightypercent.net;
+  server_name www.eightypercent.net;
 
   root   /sites/workdir/eightypercent/master/public;
 
